[package]
name = "autograph"
version = "0.1.0"
edition = "2021"
authors = ["HLX Contributors"]
license = "Apache-2.0"
description = "Visual workflow automation powered by HLX"

[dependencies]
hlx_core = { path = "../../hlx-compiler/hlx/hlx_core" }
hlx_compiler = { path = "../../hlx-compiler/hlx/hlx_compiler" }
hlx_runtime = { path = "../../hlx-compiler/hlx/hlx_runtime" }

axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
